# mlops-crypto-predictor

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
dashboards/: candles.json
deployments/dev/backfill-technical-indicators/: backfill-technical-indicators.yaml
deployments/dev/kind/: create_cluster.sh  install_grafana.sh
deployments/dev/kind/manifests/: kafka-e11b.yaml
deployments/dev/prediction-generator/: kustomization.yaml  prediction-generator-cm.yaml  prediction-generator-d.yaml
deployments/dev/training-pipeline/: kustomization.yaml  training-pipeline-cj.yaml  training-pipeline-cm.yaml  training-pipeline-j.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/kind/: install_kafka_prod.sh  install_kafka_ui_prod.sh  install_risingwave.sh
deployments/prod/kind/manifests/: grafana-values.yaml  kafka-e11b-prod.yaml  kafka-ui-all-in-one-prod.yaml  mlflow-values.yaml  risingwave-values.yaml
deployments/prod/technical_indicators/: technical_indicators.yaml
deployments/prod/trades/: trades.yaml
docker/: prediction-generator.Dockerfile  ti.Dockerfile  training-pipeline.Dockerfile
services/candles/: pyproject.toml
services/predictor/: pyproject.toml
services/predictor/mlruns/0/: meta.yaml
services/predictor/src/predictor/: config.py  data_validation.py  eda_report.html  model_registry.py  model_validation.py  models.py  names.py  predict.py  train.py
services/technical_indicators/: pyproject.toml  query.sql  settings.env
services/trades/: pyproject.toml
services/trades/src/trades/: config.py  main.py  (+3 more)
(+12 files in other folders)
